--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1986,11 +1986,12 @@ footer{
  .footer-top
 {
   background-color: rgba(0,0,0,0.3) !important;
-  color: #eecb66;
+  color: #FDE08D;
   font-family: 'Taviraj-Regular';
   padding: 40px 0px !important;
   font-size: 18px;
   text-transform: uppercase;
+  letter-spacing: 0.005em;
 }
 
 @media (max-width: 1366px) {
