--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,15 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+@font-face {
+  font-family: 'MyCambria';
+  font-weight: bold;
+  src: url('assets/font/cambriab.ttf')  format('truetype');
+}
+
 body {
-  font-family: "Open Sans", sans-serif;
-  color: #444444;
+  font-family: "MyCambria";
+  color: #FFFFFF;
 }
 
 a {
@@ -24,7 +30,11 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "MyCambria";
+  color: #FFF000;
+}
+.yellow {
+  color: #FFF000;
 }
 
 /*--------------------------------------------------------------
@@ -286,6 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+
 #hero {
   width: 100%;
   height: 100vh;
@@ -475,7 +486,15 @@ section {
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
   color: #556270;
+
+  background: -webkit-linear-gradient(top, #8f6B29, #ffe6a1 50%, #9e7934 63%, #FDE08D 80% );
+  background: linear-gradient(top, #8f6B29, #FDE08D, #DF9F28);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+
 }
+
 
 /*--------------------------------------------------------------
 # Breadcrumbs
