--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
 html
 {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 /*--------------------------------------------------------------
 # General
@@ -70,7 +70,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #header {
   background: white;
-  transition: all 0.5s;
+  /*transition: all 0.5s;*/
   z-index: 997;
   padding: 20px 0;
 }
@@ -2229,8 +2229,8 @@ table td.td-item
   display: block;
 }
 .waste_process {
-  width: auto;
-  height: 400px;
+  width: 100%;
+  /*height: 400px;*/
   margin: auto;
   display: block;
 }
@@ -2252,4 +2252,35 @@ table td.td-item
   max-height: 300px;
   margin: auto;
   display: block;
+}
+
+@media (max-width: 1465px) {
+
+  small.subtitle {
+      font-size: 26px !important;
+  }
+
+  .top-header h1 {
+    font-size: 56px;
+  }
+
+  h1.big-name {
+    font-size: 160px;
+  }
+
+  .company-logo {
+      height: 270px;
+      margin-top: -50%;
+      margin-left: -23%;
+  }
+}
+
+.text-double-dot{
+  position: absolute;
+    margin-left: -10px;
+}
+
+.text-dash{
+  position: absolute;
+    margin-left: -15px;
 }
